# ElecClassification

./: .gitignore  README.md  pyproject.toml  todo.md
configs/: moment.yaml
configs/experiments/: README.md  cnn_baseline.yaml  length_1024.yaml  length_256.yaml  length_512.yaml  length_816.yaml  moment_full_finetune.yaml  moment_head_lr_1e3.yaml  moment_head_lr_1e4.yaml  moment_head_lr_1e5.yaml  moment_linear_probe.yaml  moment_partial_finetune.yaml  moment_svm_rbf.yaml  normalization_minmax.yaml  normalization_none.yaml  normalization_zscore.yaml
configs/models/: moment-1-large.json
docs/: data_dictionary.md  troubleshooting.md
docs/experiment_records/: data_quality_findings.md  initial_baseline_results.md  v100_results_20260720.md
legacy/: ceshi.py  改进TCN.py  改进TCN优化输出曲线.py  画曲线.py  画曲线测试.py
src/tcn_moment/: __init__.py  analyze_data.py  check_environment.py  check_moment_model.py  config.py  data.py  experiment.py  io_utils.py  metrics.py  run_suite.py  summarize_runs.py  train_baselines.py  train_cnn.py  train_moment.py  train_moment_svm.py  train_tcn.py  training_utils.py
tests/: test_experiment.py  test_moment_optimization.py  test_moment_svm.py  test_training_config.py
