[project]
name = "charging-power-moment"
version = "0.1.0"
description = "Charging power time-series classification experiments with MOMENT."
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "joblib>=1.4.2",
    "matplotlib>=3.9.0",
    "momentfm>=0.1.4",
    "numpy==1.25.2",
    "openpyxl>=3.1.5",
    "pandas>=2.2.2",
    "pyyaml>=6.0.2",
    "scikit-learn>=1.5.0",
    "torch>=2.7",
    "tqdm>=4.66.4",
]

[project.scripts]
moment-train = "tcn_moment.train_moment:main"
tcn-train = "tcn_moment.train_tcn:main"
moment-inspect-data = "tcn_moment.data:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tcn_moment"]

[tool.uv]
package = true

[tool.ruff]
line-length = 100
target-version = "py311"
