[project]
name = "charging-power-moment"
version = "0.1.0"
description = "Charging power time-series classification experiments with MOMENT."
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "joblib>=1.4.2",
    "matplotlib>=3.9.0",
    "momentfm==0.1.4",
    "numpy==1.25.2",
    "openpyxl>=3.1.5",
    "pandas>=2.2.2",
    "pyyaml>=6.0.2",
    "scikit-learn>=1.5.0",
    "torch==2.12.1+cu126",
    "tqdm>=4.66.4",
]

[project.scripts]
moment-train = "tcn_moment.train_moment:main"
moment-svm = "tcn_moment.train_moment_svm:main"
tcn-train = "tcn_moment.train_tcn:main"
cnn-train = "tcn_moment.train_cnn:main"
baseline-train = "tcn_moment.train_baselines:main"
experiment-suite = "tcn_moment.run_suite:main"
moment-analyze-data = "tcn_moment.analyze_data:main"
experiment-summarize = "tcn_moment.summarize_runs:main"
moment-inspect-data = "tcn_moment.data:main"
moment-check-environment = "tcn_moment.check_environment:main"
moment-check-model = "tcn_moment.check_moment_model:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tcn_moment"]

[tool.uv]
package = true
environments = [
    "sys_platform == 'linux' and platform_machine == 'x86_64'",
]

[tool.uv.sources]
torch = { index = "pytorch-cu126" }

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://mirrors.aliyun.com/pytorch-wheels/cu126/"
format = "flat"
explicit = true

[[tool.uv.index]]
name = "aliyun-pypi"
url = "https://mirrors.aliyun.com/pypi/simple/"
default = true

[tool.ruff]
line-length = 100
target-version = "py311"
